--- a/THANKS
+++ b/THANKS
@@ -6,3 +6,4 @@ bug-report mailing list (as seen at end of e.g., cp --help).
 Brandon Invergo                      brandon@gnu.org
 Karl Berry                           karl@gnu.org
 Mohammad-Reza Khellat                moha.khe@gmail.com
+Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
