MakeProfiles mostly finished
Most of the initial requirements of MakeProfiles are now done: the
profiles are made separately or mergered together. A simple log file
is also created. I only have to add the WCS coordinates to the
individual and final images.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-01-18  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* src/mkprof/mkprof.c (writelog): Added.
+	(write): Completed.
+
+	* src/mkprof/args.h (arg_option): Added `--nomerged`.
+
+	* lib/txtarrayvv.c (doformatting): Added option to use `f` in
+	printf or `g`.
+
 2015-01-16  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/mkprof/mkprof.c (builtqueue_addempty): Added.
